Change materialized view and /stats api
